...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="179"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Nnw-jr-7bT" id="B9A-h0-HEA">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="179"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Primary Color:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRt-HW-9rQ">
                                                    <rect key="frame" x="8" y="18" width="96" height="18"/>
                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
                                                    <color key="textColor" red="0.0039215686269999999" green="0.46666666670000001" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <segmentedControl opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="LHW-tp-vmZ">
                                                    <rect key="frame" x="8" y="132.5" width="359" height="39.5"/>
                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <segments>
                                                        <segment title="Red"/>
                                                        <segment title="Blue"/>
                                                        <segment title="Gray"/>
                                                        <segment title="Green"/>
                                                        <segment title="White"/>
                                                        <segment title="Yellow"/>
                                                    </segments>
                                                    <connections>
                                                        <action selector="colorSelected:" destination="5I9-Lh-CMc" eventType="valueChanged" id="Q6F-Mg-qA7"/>
                                                    </connections>
                                                </segmentedControl>
                                                <segmentedControl opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="CUu-sq-rdm">
...
                                                    <color key="backgroundColor" red="0.0039215686269999999" green="0.46666666670000001" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="1yT-zC-tHe" secondAttribute="height" multiplier="3:1" id="2g0-8N-vfT"/>
                                                        <constraint firstAttribute="height" constant="44" id="dqh-2D-AnC"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="15"/>
                                                    <state key="normal" title="Reset Theme">
                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    </state>
                                                    <userDefinedRuntimeAttributes>
                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                            <integer key="value" value="5"/>
                                                        </userDefinedRuntimeAttribute>
...
            <point key="canvasLocation" x="-616" y="899"/>
        </scene>
        <!--Customize-->
        <scene sceneID="VuM-lZ-Ins">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="bHb-Az-HmW" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" tag="2" title="Customize" image="settingsIcon" id="TY7-to-nps"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="oM8-eg-Yhv">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
...
